Styling Title-Header and Title-Subhead

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="title-time-bg">
                         <input type="date" class="title-time">
                     </div>
-                    <div class="title-plus">+</div>
+                    <p class="title-plus">+</p>
                 </section>
 
                 <ul class="task-list">
@@ -87,11 +87,9 @@
                 </ul>
             </li>
         </ul>
-        
-        <div class="menu-icon-bg">
-            <img src="assets/hamburger.svg" alt="menu-icon" class="menu-icon">
-        </div>
-        <div class="plus-icon-bg">+</div>
+
+        <img src="assets/menu-btn.svg" alt="menu icon" class="menu-icon">
+        <img src="assets/new-task-btn.svg" alt="plus icon" class="plus-icon">
     </main>
 </body>
 
