Finished basic task styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="title-time-bg">
                         <input type="date" class="title-time">
                     </div>
-                    <p class="title-plus">+</p>
+                    <img src="assets/Add_round.svg" alt="plus icon" class="title-plus">
                 </section>
 
                 <ul class="task-list">
@@ -49,20 +49,21 @@
                         <div class="task-time-bg">
                             <input type="date" class="task-time">
                         </div>
+                        <img src="assets/Close_round.svg" alt="cross icon" class="task-cross">
                         <ul class="task-type-list">
                             <li class="task-type">Type</li>
                             <li class="task-type">Type</li>
                             <li class="task-type">Type</li>
                         </ul>
                         <div class="task-description-bg">
-                            <input type="text" class="task-description">
+                            <textarea class="task-description"></textarea>
                         </div>
                         <div class="task-started-bg">
-                            <img src="" alt="" class="started-icon">
+                            <img src="/assets/checkbox_checked.svg" alt="checkbox-icon" class="check-icon">
                             <p>Started</p>
                         </div>
                         <div class="task-completed-bg">
-                            <img src="" alt="" class="completed-icon">
+                            <img src="/assets/checkbox.svg" alt="checkbox-checked-icon" class="check-icon">
                             <p>Completed</p>
                         </div>
                     </li>
@@ -76,11 +77,9 @@
                             <input type="date" class="task-time">
                         </div>
                         <div class="task-started-bg">
-                            <img src="" alt="" class="started-icon">
                             <p>Started</p>
                         </div>
                         <div class="task-completed-bg">
-                            <img src="" alt="" class="completed-icon">
                             <p>Completed</p>
                         </div>
                     </li>
