Setup up temporary animation for tab-header Redo menu icon and new title icon Add some responsive feature on titles Hide out horizontal scroll bar

--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
             </li>
         </ul>
 
-        <img src="assets/menu-btn.svg" alt="menu icon" class="menu-icon">
-        <img src="assets/new-task-btn.svg" alt="plus icon" class="plus-icon">
+        <div class="menu-icon">
+            <img src="assets/hamburger.svg" alt="menu icon">
+        </div>
+        <div class="plus-icon">
+            <p>+</p>
+        </div>
     </main>
 </body>
 
